--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <input class="form__input" type="text" name="your_name" placeholder="Your Name">
       <input class="form__input" type="email" name="email" placeholder="Email">
       <button class="form__button button submit">Get Code</button>
+      <a class="form__link" href="https://aarya00s.github.io/template/">Enter without code?</a>
     </form>
   </div>
   <div class="container b-container" id="b-container">
